k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudvault-deployment
  namespace: cloudvault
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cloudvault
  template:
    metadata:
      labels:
        app: cloudvault
    spec:
      containers:
        - name: backend
          image: us.icr.io/cloudvault/backend:latest
          ports:
            - containerPort: 8080
        - name: frontend
          image: us.icr.io/cloudvault/frontend:latest
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: cloudvault-service
  namespace: cloudvault
spec:
  selector:
    app: cloudvault
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
